redid some spacing fixed spellings and added border to progress bar

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     /* horizontal margin auto */
     margin-left: auto;
     margin-right: auto;
-    max-width: 800px;
+    max-width: 1000px;
 }
 
 .field-group{
